SDV: Reorganize subprojects
This patch reorganizes the subprojects.
Pylint Fixes. Additional Configurations

Signed-off-by: Sridhar K. N. Rao <sridhar.rao@spirent.com>
Change-Id: I021f33f035d7b2dcfded230ca40337afdac183e8

--- a/sdv/conf/01_swpreurlsvalid.conf
+++ b/sdv/conf/01_swpreurlsvalid.conf
@@ -12,23 +12,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-"""
-Abstract class for N/W Lnks Prevalidations.
-Implementors, please inherit from this class.
-"""
+# Modify this value to any Installer projects that have
+# manifests (templates and configuration files)
+SW_PRE_URLS_VALIDATOR = 'Airship'
 
-
-class INwLinksValidator():
-    """ Model for a Links Validator """
-    def __init__(self):
-        """ Initialization of the Interface """
-        self._default_nwlinks_validation = None
-
-    @property
-    def validation_nwlinks_defaults(self):
-        """ Default Validation values """
-        return True
-
-    def validate(self):
-        """ Validating Compute Node Links"""
-        raise NotImplementedError('Please call an implementation.')
+# Airship Specific configurations.
+AIRSHIP_MANIFEST_URL = 'https://gerrit.opnfv.org/gerrit/airship'
+AIRSHIP_MANIFEST_BRANCH = 'master'
+AIRSHIP_MANIFEST_DOWNLOAD_PATH = '/tmp'
+AIRSHIP_MANIFEST_SITE_NAME = 'intel-pod10'
+AIRSHIP_TREASUREMAP_VERSION = 'v1.7'
