--- a/sdv/conf/03_swpoststatevalid.conf
+++ b/sdv/conf/03_swpoststatevalid.conf
@@ -12,23 +12,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-"""
-Abstract class for N/W Lnks Prevalidations.
-Implementors, please inherit from this class.
-"""
+SW_POST_STATE_VALIDATOR = 'Airship'
 
+# For the K8S based deployment Type
+CLUSTER_INFO_FILE_PATH = ""
+CLUSTER_ACCESS_FILE_PATH = ""
 
-class INwLinksValidator():
-    """ Model for a Links Validator """
-    def __init__(self):
-        """ Initialization of the Interface """
-        self._default_nwlinks_validation = None
+# For Containers-without K8S and VMs based Deployment.
+OVERCLOUD_INFO_FILE_PATH = ""
+OVERCLOUD_ACCESS_FILE_PATH = ""
 
-    @property
-    def validation_nwlinks_defaults(self):
-        """ Default Validation values """
-        return True
-
-    def validate(self):
-        """ Validating Compute Node Links"""
-        raise NotImplementedError('Please call an implementation.')
+# Any validation specific information is added in this file.
+VALIDATION_CONFIG_FILE_PATH = ""
