--- a/sdv/conf/06_resmodvalid.conf
+++ b/sdv/conf/06_resmodvalid.conf
@@ -12,23 +12,4 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-"""
-Abstract class for N/W Lnks Prevalidations.
-Implementors, please inherit from this class.
-"""
-
-
-class INwLinksValidator():
-    """ Model for a Links Validator """
-    def __init__(self):
-        """ Initialization of the Interface """
-        self._default_nwlinks_validation = None
-
-    @property
-    def validation_nwlinks_defaults(self):
-        """ Default Validation values """
-        return True
-
-    def validate(self):
-        """ Validating Compute Node Links"""
-        raise NotImplementedError('Please call an implementation.')
+RES_MOD_VALIDATOR = 'custom'
