--- a/sdv/conf/00_common.conf
+++ b/sdv/conf/00_common.conf
@@ -8,9 +8,12 @@ LOG_FILE_DEFAULT = 'valid-overall.log'
 
 ROOT_DIR = os.path.normpath(os.path.join(
     os.path.dirname(os.path.realpath(__file__)), '../'))
-SW_PRE_VALID_DIR = os.path.join(ROOT_DIR, 'SoftwarePreValid')
-SW_POST_VALID_DIR = os.path.join(ROOT_DIR, 'SoftwarePostValid')
+SW_PRE_URLS_VALID_DIR = os.path.join(ROOT_DIR, 'SoftwarePreUrlsValid')
+SW_PRE_CONFIG_VALID_DIR = os.path.join(ROOT_DIR, 'SoftwarePreConfigValid')
+SW_POST_STATE_VALID_DIR = os.path.join(ROOT_DIR, 'SoftwarePostStateValid')
+SW_POST_SECURITY_VALID_DIR = os.path.join(ROOT_DIR, 'SoftwarePostSecurityValid')
 NW_LINKS_VALID_DIR = os.path.join(ROOT_DIR, 'NwLinksValid')
+RES_MOD_VALID_DIR = os.path.join(ROOT_DIR, 'ResourceModelValid')
 
 # 'debug', 'info', 'warning', 'error', 'critical'
 VERBOSITY = 'warning'
