--- a/sdv/conf/04_swpostsecurityvalid.conf
+++ b/sdv/conf/04_swpostsecurityvalid.conf
@@ -11,24 +11,6 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+#
 
-"""
-Abstract class for N/W Lnks Prevalidations.
-Implementors, please inherit from this class.
-"""
-
-
-class INwLinksValidator():
-    """ Model for a Links Validator """
-    def __init__(self):
-        """ Initialization of the Interface """
-        self._default_nwlinks_validation = None
-
-    @property
-    def validation_nwlinks_defaults(self):
-        """ Default Validation values """
-        return True
-
-    def validate(self):
-        """ Validating Compute Node Links"""
-        raise NotImplementedError('Please call an implementation.')
+SW_POST_SECURITY_VALIDATOR = 'Airship'
