Add support for TestAPI, Reporting and new checks
Adds following new checks:
    * ceph_health_check
    * prometheus_check
    * grafana_check
    * elasticsearch_check
    * kibana_check
    * nagios_check
    * elasticsearch_exporter_check
    * fluentd_exporter_check
    * physical_network_check
    * reserved_vnf_cores_check
    * isolated_cores_check
    * vswitch_pmd_cores_check
    * vswitch_dpdk_lcore_check
    * os_reserved_cores_check
    * nova_scheduler_filters_check
    * cpu_allocation_ratio_check

Updated result reporting format to match with TestAPI result formating

Signed-off-by: Parth Yadav<parthyadav3105@gmail.com>
Change-Id: I6bf1a5da878cfdf6a064b26539c922784f8b318f

--- a/sdv/docker/sdvstate/example/state.yml
+++ b/sdv/docker/sdvstate/example/state.yml
@@ -15,3 +15,6 @@ PDF_FILE: example/intel-pod10.json
 # Path to kube-config file
 KUBE_CONFIG : example/kubepod10
 
+MASTER_ROLE_NAME : masters
+WORKER_ROLE_NAME : workers
+
