DOCS: Update the Documentation.
This patch updates the documentation for Jerma.

Signed-off-by: Sridhar K. N. Rao <sridhar.rao@spirent.com>
Change-Id: Ic0d61a74b1c8d31c8facaa16837894fc816ac739

--- a/tox.ini
+++ b/tox.ini
@@ -1,25 +1,17 @@
 [tox]
-envlist = pep8,yamllint,pylint
+minversion = 1.6
+envlist = 
+    docs,
+    docs-linkcheck
+skipsdist = true
 
-[testenv]
-deps =
-  -c{env:UPPER_CONSTRAINTS_FILE:https://opendev.org/openstack/requirements/raw/branch/master/upper-constraints.txt}
-  -r{toxinidir}/requirements.txt
-  -r{toxinidir}/test-requirements.txt
-
-[testenv:pep8]
-basepython = python3
-commands = flake8
-
-[testenv:yamllint]
-basepython = python3
-files =
-  INFO.yaml
-  sdv
+[testenv:docs]
+deps = -rdocs/requirements.txt
 commands =
-  yamllint -s {[testenv:yamllint]files} -c {toxinidir}/yamllintrc
+    sphinx-build -b html -n -d {envtmpdir}/doctrees ./docs/ {toxinidir}/docs/_build/html
+    echo "Generated docs available in {toxinidir}/docs/_build/html"
+whitelist_externals = echo
 
-[testenv:pylint]
-basepython = python3
-commands =
-  pylint sdv
+[testenv:docs-linkcheck]
+deps = -rdocs/requirements.txt
+commands = sphinx-build -b linkcheck -d {envtmpdir}/doctrees ./docs/ {toxinidir}/docs/_build/linkcheck
