Fix Dockerfile bugs
Fixes some Dockerfile bugs.
Also, fixes some other syntax bugs, does not covers logical bug fixes.

Signed-off-by: Parth Yadav<parthyadav3105@gmail.com>
Change-Id: I72cfbf058a2c35148337359d78e1fb8f1b3234d3

--- a/sdv/docker/sdvconfig/Dockerfile
+++ b/sdv/docker/sdvconfig/Dockerfile
@@ -5,6 +5,10 @@ RUN mkdir sdvconfig
 # change the workdir to the newly created file
 WORKDIR /sdvconfig/
 
+# install git
+RUN apt update
+RUN apt install -y git
+
 # install from requirements.txt
 COPY requirements.txt /sdvconfig/requirements.txt
 RUN pip install -r requirements.txt
@@ -16,7 +20,7 @@ COPY mapping/ /sdvconfig/mapping/
 COPY validation/ /sdvconfig/validation/
 COPY server.py /sdvconfig/
 COPY cli_validation.py /sdvconfig/
-COPY testapi/ sdvconfig/testapi/
+COPY testapi/ /sdvconfig/testapi/
 COPY manifest /sdvconfig/manifest/
 
 # expose port for rest calls
