Initialize k8s test suite for Airship
This patch updates sdv framework to support multiple test suites.
Current test suites:
    * default
    * k8s
Current Cloud Installers:
    * Airship

The patch also adds makefile for sdv framework to ease development work.
Some useful makefile target:
    * make sandbox
    * make run
    * make lint
    * make bash
Run `make help` for complete usage guide.

The patch restructures the codebases directory structure.

Signed-off-by: Parth Yadav<parthyadav3105@gmail.com>
Change-Id: I109d13f84334ec1cfa4f9c17b74d38a979272ea5

--- a/sdv/docker/sdvstate/Dockerfile
+++ b/sdv/docker/sdvstate/Dockerfile
@@ -2,18 +2,17 @@ FROM python:3.8-slim-buster
 
 MAINTAINER Parth Yadav <parthyadav3105@gmail.com>
 
-WORKDIR /state/
+WORKDIR /sdv/
 
-COPY requirements.txt /state/requirements.txt
+COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 RUN rm requirements.txt
 
-COPY core/ /state/core/
-COPY settings/ /state/settings/
-COPY tools/ /state/tools/
-COPY validator/ /state/validator/
-COPY state /state/
-COPY server /state/
+COPY internal/ internal/
+COPY settings/ settings/
+COPY tools/ tools/
+COPY state .
+COPY server .
 
 ENV RESULTS_PATH /tmp/
 ENV RESULTS_FILENAME results.json
