Adds Kuberef Validator
This patch adds Kuberef Validator and implements following
checks for Kuberef Validator:
    * pod_health_check

Signed-off-by: Parth Yadav<parthyadav3105@gmail.com>
Change-Id: Ief2a75f5ea4a4e39a8c07002c29e2d732ca00151

--- a/sdv/docker/sdvstate/settings/installer.yml
+++ b/sdv/docker/sdvstate/settings/installer.yml
@@ -27,3 +27,17 @@ airship_namespace_list:
   - osh-infra
   - tenant-ceph
   - openstack
+
+
+
+
+
+#####################
+## Kuberef
+######################
+
+# Default Kuberef namespace list
+# list all kubernetes namespace that have Kuberef components
+kuberef_namespace_list:
+  - monitoring
+  - kube-system
