DOCS: Create release notes for Lakelse
Release notes for Lakese added.

Signed-off-by: Sridhar K. N. Rao <sridhar.rao@spirent.com>
Change-Id: I260f23821893fff487b16b8550a1dfa6e19e5169

--- a/sdv/docker/sdvurls/Dockerfile
+++ b/sdv/docker/sdvurls/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.8-slim-buster
 WORKDIR /sdvurls/
 
 COPY requirements.txt /state/requirements.txt
-RUN pip install -r requirements.txt
+RUN pip install -r /state/requirements.txt
 
 COPY server /sdvurls/
 
